[SYNCOPE-1460] Dynamic Domain Management